--- a/imagem.html
+++ b/imagem.html
@@ -9,6 +9,8 @@
     <h1>Imagem Aleatória</h1>
     <img id="randomImage" src="" alt="Imagem Aleatória" />
 
+    <!-- so pra testar msm -->
+
     <script>
       var images = [
         "https://i.pinimg.com/564x/15/42/e3/1542e31335f81086a0ab6c5d32cbcc1c.jpg",
