--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
     <script>
       var images = [
-        "https://i.pinimg.com/564x/15/42/e3/1542e31335f81086a0ab6c5d32cbcc1c.jpg",
-        "https://i.pinimg.com/564x/56/86/10/56861034f770a26cb40021da9f905153.jpg",
-        "https://i.pinimg.com/564x/91/08/f6/9108f648942186092e6397b5902a05c5.jpg",
-        "https://i.pinimg.com/564x/67/21/b0/6721b00ec33795d4f88197b7662d3223.jpg",
-        "https://i.pinimg.com/564x/54/71/9a/54719a92f0df7991d4bb2f393940db65.jpg",
-        "https://i.pinimg.com/564x/b4/1e/ca/b41eca44d12461cc5e02f2b594c9fdf2.jpg",
-        "https://i.pinimg.com/564x/5f/dc/36/5fdc3654cd048a60ba812e1fd5139847.jpg",
-        "https://i.pinimg.com/564x/c1/61/c8/c161c8eb9755205f66a499c50d807ead.jpg",
+        "https://i.pinimg.com/736x/40/ce/18/40ce18bcfbcc77ed5eba7d923652a7cc.jpg",
+        "blob:https://br.pinterest.com/b99626dc-c279-42b5-ae0c-b73ad677658e",
+        "blob:https://br.pinterest.com/28f3d178-6971-41eb-9504-139f2c1c37b0",
+        "blob:https://br.pinterest.com/6e53afe4-6abb-41d5-ace9-3ed1df9e6bd3",
+        "https://i.pinimg.com/736x/0a/74/ac/0a74acb3fd572a82b907c3b038c81294.jpg",
+        "https://i.pinimg.com/736x/b8/00/65/b800653bc2ef330c792e2cb252e36202.jpg",
+        "https://i.pinimg.com/736x/cc/54/4e/cc544efb9e91a155c37eb2af3802fcd6.jpg",
+        "https://i.pinimg.com/736x/68/bb/b2/68bbb2ca3fd11b896ac489fd72919d3a.jpg",
         // Adicione mais links para suas imagens aqui
       ];
 
